--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
-  "keywords": ["react", "starter"],
+  "keywords": [
+    "react",
+    "starter"
+  ],
   "main": "src/index.js",
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.0"
+    "react-scripts": "4.0.0",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
+    "stylelint": "^15.10.3",
+    "stylelint-prettier": "^4.0.2",
     "typescript": "4.1.3"
   },
   "scripts": {
@@ -19,5 +25,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
